[project]
name = "sportsbook-recommendations"
version = "0.1.11"
description = "Sportsbook recommendations model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
]

[tool.uv]
dev-dependencies = [
    "bandit>=1.8.2",
    "pandas-stubs>=2.2.3.241126",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "types-boto3[essential]>=1.36.16",
]
